fixing img styling on facebook video posts. commenting out first blog post. will be spillover onto 2nd page when we're cms'ing

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -428,8 +428,6 @@ section.two-column {
 .fb-post .fb-video img {
 	width: 100%;
 	height: 170px;
-	object-fit: none;
-	object-position: center;
 	opacity: .9;
 	display: block;
 }
